--- a/themes/academic/data/themes/default.toml
+++ b/themes/academic/data/themes/default.toml
@@ -5,12 +5,12 @@ name = "Default"
 light = true
 
 # Primary
-primary = "#2962ff"
+primary = "#546787"
 
 # Menu
 menu_primary = "#fff"
 menu_text = "#34495e"
-menu_text_active = "#2962ff"
+menu_text_active = "#546787"
 menu_title = "#2b2b2b"
 
 # Home sections
