--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
+    "start": "hugo server",
     "deploy": "hugo && git add . && git commit -m 'generated' && git push origin master"
   },
   "repository": {
