--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "hugo server",
+    "build": "hugo",
     "deploy": "hugo && git add . && git commit -m 'generated' && git push origin master"
   },
   "repository": {
